--- a/entities/Makefile
+++ b/entities/Makefile
@@ -58,6 +58,8 @@ codegen:  ## Update the GQL types used by the CLI
 	$(docker_compose_run) entities strawberry export-schema api.main:schema > api/schema.graphql
 	$(docker_compose) exec entities python3 -m sgqlc.introspection --exclude-deprecated --exclude-description http://localhost:8008/graphql api/schema.json
 	$(docker_compose) exec entities sgqlc-codegen schema api/schema.json cli/gql_schema.py
+	$(docker_compose_run) $(FOLDER) black database/models/
+	$(docker_compose_run) $(FOLDER) ruff check --fix database/models/
 
 ### CERBOS #############################################
 cerbos-tests:
