--- a/workflows/Makefile
+++ b/workflows/Makefile
@@ -51,6 +51,9 @@ local-start: .env.localdev ## Start a local dev environment that's been stopped.
 local-pgconsole: ## Connect to the local postgres database.
 	$(docker_compose) exec postgres psql "$(LOCAL_DB_CONN_STRING)"
 
+.PHONY: local-editable-plugins
+local-editable-plugins:
+	$(docker_compose) exec workflows bash -c 'for plugin in plugins/*/*; do pip install -e "$$plugin"; done'
 
 .PHONY: local-db-tests
 local-db-tests: ## Run workflow db tests
