--- a/entities/pyproject.toml
+++ b/entities/pyproject.toml
@@ -40,6 +40,10 @@ boto3-stubs = {extras = ["s3", "sts"], version = "^1.28.61"}
 faker-enum = "^0.0.2"
 biopython = "^1.81"
 moto = "^4.2.3"
+jinja2 = "^3.1.2"
+linkml = "^1.5.7"
+strcase = "^1.0.0"
+linkml-runtime = "^1.6.0"
 sqlalchemy_utils = "^0.41.1"
 
 [build-system]
