--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@ entities/api/schema.json	linguist-generated=true
 entities/api/schema.graphql	linguist-generated=true
 entities/cli/gql_schema.py	linguist-generated=true
 entities/api/types/*	linguist-generated=true
-entities/database/models/*    linguist-generated=true
-entities/cerbos/policies/*    linguist-generated=true
-entities/support/enums.py  linguist-generated=true
+entities/database/models/*	linguist-generated=true
+entities/cerbos/policies/*	linguist-generated=true
+entities/support/enums.py	linguist-generated=true
+entities/schema/README.md	linguist-generated=true
