--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
+entities/cli/gql_schema.py	linguist-generated=true
 entities/api/schema.json	linguist-generated=true
 entities/api/schema.graphql	linguist-generated=true
-entities/cli/gql_schema.py	linguist-generated=true
+entities/api/queries.py	linguist-generated=true
+entities/api/mutations.py	linguist-generated=true
 entities/api/types/*	linguist-generated=true
 entities/database/models/*	linguist-generated=true
 entities/cerbos/policies/*	linguist-generated=true
