[CZID-8695] Codegen mutations (#113)
* Move shared Entity fields to EntityInterface

* Simplify attr.inverse codegen

* Fix typo

* Codegen Strawberry input types for mutations

* Cleanup

* Checkpoint

* Checkpoint

* Add support for update mutations

* Add support for deletion mutations

* Small fix

* Auto generate mutations.py file

* Remove unused code

* Fix lint issues

* R1 file needs to be optional, so can create a sequencingRead entity, then upload a file to link it to!

* Fix lint error

* Fixes CZID-8869: need plural name in codegen for relay connections

* Fix tests

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,10 @@
+entities/cli/gql_schema.py	linguist-generated=true
 entities/api/schema.json	linguist-generated=true
 entities/api/schema.graphql	linguist-generated=true
-entities/cli/gql_schema.py	linguist-generated=true
+entities/api/queries.py	linguist-generated=true
+entities/api/mutations.py	linguist-generated=true
 entities/api/types/*	linguist-generated=true
-entities/database/models/*    linguist-generated=true
-entities/cerbos/policies/*    linguist-generated=true
-entities/support/enums.py  linguist-generated=true
+entities/database/models/*	linguist-generated=true
+entities/cerbos/policies/*	linguist-generated=true
+entities/support/enums.py	linguist-generated=true
+entities/schema/README.md	linguist-generated=true
